Added zsh to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# set tmux to use ZSH as default shell
+set-option -g default-shell /bin/zsh
+
 # use C-a, since it's on the home row and easier to hit than C-b
 set-option -g prefix C-a
 unbind-key C-a
