actually fixed tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,13 +11,25 @@ set -g base-index 1
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # vi is good
-setw -g mode-keys vi
+set -g mode-keys vi
 
 # mouse behavior
 set -g mouse-utf8 on
 set -g mouse on
 
+# Default termtype. If the rcfile sets $TERM, that overrides this value.
+set -g default-terminal screen-256color
 set-option -g default-terminal screen-256color
+
+# set first window to index 1 (not 0) to map more to the keyboard layout...
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+
+# key binding
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 bind-key : command-prompt
 bind-key r refresh-client
@@ -27,13 +39,17 @@ bind-key space next-window
 bind-key bspace previous-window
 bind-key enter next-layout
 
-# use vim-like keys for splits and windows
-bind-key v split-window -h -c "#{pane_current_path}"
-bind-key s split-window -v -c "#{pane_current_path}"
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# Create splits and vertical splits
+bind-key v split-window -h -p 50 -c "#{pane_current_path}"
+bind-key ^V split-window -h -p 50 -c "#{pane_current_path}"
+bind-key s split-window -p 50 -c "#{pane_current_path}"
+bind-key ^S split-window -p 50 -c "#{pane_current_path}"
+
+# Pane resize in all four directions using vi bindings.
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
 
 # uncomment below stanza to enable smart pane switching with awareness of vim splits
 # bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
@@ -75,16 +91,6 @@ set-option -g status-left ''
 set-option -g status-right '%l:%M%p'
 set-window-option -g window-status-current-fg magenta
 set-option -g status-fg default
-
-# Status Bar solarized-dark (default)
-set-option -g status-bg black
-set-option -g pane-active-border-fg black
-set-option -g pane-border-fg black
-
-# Status Bar solarized-light
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-active-border-fg white"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-fg white"
 
 # Set window notifications
 setw -g monitor-activity on
