--- a/tmux.conf
+++ b/tmux.conf
@@ -45,6 +45,9 @@ bind-key ^V split-window -h -p 50 -c "#{pane_current_path}"
 bind-key s split-window -p 50 -c "#{pane_current_path}"
 bind-key ^S split-window -p 50 -c "#{pane_current_path}"
 
+# Create new window in current directory
+bind-key c new-window -c "#{pane_current_path}"
+
 # Pane resize in all four directions using vi bindings.
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
@@ -68,7 +71,7 @@ set-window-option -g other-pane-width 80
 
 bind-key a last-pane
 bind-key q display-panes
-bind-key c new-window
+# bind-key c new-window
 bind-key t next-window
 bind-key T previous-window
 
