--- a/tmux.conf
+++ b/tmux.conf
@@ -85,4 +85,12 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-run-shell '. ~/.dotfiles/colors/tmux/airline-dracula.tmux'
+# run-shell '. ~/.dotfiles/colors/tmux/airline-dracula.tmux'
+
+# TPM Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
