--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
-[submodule "colors/iterm"]
+[submodule "colors/iterm/dracula"]
 	path = colors/iterm/dracula
 	url = git@github.com:dracula/iterm.git
-[submodule "colors/konsole"]
+[submodule "colors/konsole/dracula"]
 	path = colors/konsole/dracula
 	url = git@github.com:dracula/konsole.git
-[submodule "colors/nord"]
+[submodule "colors/iterm/nord"]
 	path = colors/iterm/nord
 	url = git@github.com:arcticicestudio/nord-iterm2.git
 [submodule "tmux/plugins/tpm"]
