--- a/tmux.conf
+++ b/tmux.conf
@@ -1,11 +1,16 @@
 # Ring the bell if any background window rang a bell
 set -g bell-action any
+set -g focus-events on
 
 # use C-a, since it's on the home row and easier to hit than C-b
 unbind C-b
 set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
+
+# easier and faster switching between next/prev window
+bind C-p previous-window
+bind C-n next-window
 
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal screen-256color
@@ -55,7 +60,7 @@ set-window-option -g mouse on
 set-option -g status-interval 2
 
 # Patch for OS X pbpaste and pbcopy under tmux.
-set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+set -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # No escape time for vi mode
 set -sg escape-time 0
@@ -91,6 +96,8 @@ bind-key l select-pane -R
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'arcticicestudio/nord-tmux'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
