--- a/tmux.conf
+++ b/tmux.conf
@@ -60,7 +60,7 @@ set-window-option -g mouse on
 set-option -g status-interval 2
 
 # Patch for OS X pbpaste and pbcopy under tmux.
-set -g default-command "reattach-to-user-namespace -l $SHELL"
+# set -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # No escape time for vi mode
 set -sg escape-time 0
